Add example 6. ~ sahil

--- a/eg4-google-font-with-video/index.html
+++ b/eg4-google-font-with-video/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine" />
     <link rel="stylesheet" href="style.css" />
     <!-- my own imports from googlefonts.. -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -13,12 +12,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine" />
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet" />
   </head>
   <body>
-    Making the Web Beautiful, 123.
     <p class="font1">I am 'Dela Gothic One'.</p>
     <p class="font2">I am 'Syne Mono'.</p>
     <p class="font3">I am 'Train One'.</p>
     <p class="font4">I am 'Lobster'.</p>
+    <p class="font5">I am 'Tangerine'.</p>
+    <p class="font6">I am 'Dancing Script'.</p>
+    <p class="font7">I am 'Pacifico'.</p>
+    <p class="font8">I am 'Indie Flower'.</p>
   </body>
 </html>
