Made 1st day. ~ sahil

--- a/14-css-units/index.html
+++ b/14-css-units/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Css units</title>
   </head>
   <body>
-    Hello, 12345
+    <div class="hero">
+      <div class="grid">
+        <div class="col">
+          <h1 class="hero-title">Using vh and vw</h1>
+          <p class="hero-text">
+            Viewport width and height are fantastic units for this type of thing! Just make sure you test things out on mobile too, you'll probably need some media queries as there
+            is a good chance things don't work out well on mobile!
+          </p>
+          <a href="" class="btn">Buy now!</a>
+        </div>
+        <div class="col">
+          <img src="https://i.picsum.photos/id/66/300/400.jpg?hmac=zHeZtOs5UABhRmo_VPYmWpMQVlZV2TKtXDNl21b7m3c" alt="" class="hero-img" />
+        </div>
+      </div>
+    </div>
+
+    <div class="more-content"></div>
   </body>
 </html>
