--- a/course-conquering-responsive-layouts/challenge06/index.html
+++ b/course-conquering-responsive-layouts/challenge06/index.html
@@ -3,26 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conquering Rsponsive Layouts</title>
+    <title>Conquering Responsive Layouts</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="hero">
+    <header>
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+            <li class="nav__item"><a href="#" class="nav__link">Sign In</a></li>
+            <li class="nav__item"><a href="#" class="nav__link nav__link--button">Sign up</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <section class="hero">
       <div class="container row">
         <div class="hero__text">
           <h1>Responsive layouts don’t have to be a struggle</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
           <a href="#" class="btn">I want to learn</a>
         </div>
-        <img src="./img/hero-img.jpg" alt="Sample image here." />
+        <img src="img/hero-img.jpg" alt="UX design sketches" class="hero__img" />
       </div>
-      <br />
-    </div>
+    </section>
 
-    <main class="container row center">
-      <section class="container-left">
-        <h2 class="clr-secondary">Quality designs made custom, on demand, just for you</h2>
+    <main class="main container row">
+      <section class="primary-content">
+        <h2 class="section-title">Quality designs made custom, on demand, just for you</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit
           amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
@@ -32,12 +45,14 @@
           amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
         </p>
       </section>
-      <aside class="container-right">
-        <h2>Cheap</h2>
+      <aside class="sidebar">
+        <h2 class="sidebar-title">Cheap</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <h2>Quick</h2>
+
+        <h2 class="sidebar-title">Quick</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <h2>Quality</h2>
+
+        <h2 class="sidebar-title">Quality</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
       </aside>
     </main>
