Big leap. ~ sahil

--- a/01.1-design-min,max-width/index.html
+++ b/01.1-design-min,max-width/index.html
@@ -9,5 +9,7 @@
   </head>
   <body>
     <img src="./image-01.jpg" alt="image here..." />
+    <p class="grow-messg">The image stopped growing.</p>
+    <p class="shrink-messg">The image stopped shrinking.</p>
   </body>
 </html>
