--- a/course-conquering-responsive-layouts/challenge07/index.html
+++ b/course-conquering-responsive-layouts/challenge07/index.html
@@ -22,7 +22,7 @@
 			</div>
 		</section>
 		<main>
-			<section class="section-zero">
+			<section class="section-starter">
 				<div class="container">
 					<h2 class="center">Quality Designs</h2>
 					<div class="row">
