Add media-queries to sass setup. ~ sahil

--- a/sass-setup-kevin/src/index.html
+++ b/sass-setup-kevin/src/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="main.scss" />
+		<link rel="stylesheet" href="media-queries.scss" />
 		<link rel="stylesheet" href="main.sass" />
 	</head>
 	<body>
@@ -30,5 +31,8 @@
 			</div>
 			<p class="d">I am paragraph.</p>
 		</section>
+
+		<hr />
+		<div class="target">Testing media media-queries grouping in scss.</div>
 	</body>
 </html>
