Add good-old-gulp setup with scss support with browser-sync🚵︎. ~ sahil

--- a/sass-setup-kevin/src/index.html
+++ b/sass-setup-kevin/src/index.html
@@ -5,9 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="simple.css" />
 		<link rel="stylesheet" href="main.scss" />
 		<link rel="stylesheet" href="media-queries.scss" />
 		<link rel="stylesheet" href="main.sass" />
+		<link rel="stylesheet" href="using-base.scss" />
 	</head>
 	<body>
 		Hello, scss/sass world, with parcel bundler! 🐥︎
@@ -33,6 +35,7 @@
 		</section>
 
 		<hr />
-		<div class="target">Testing media media-queries grouping in scss.</div>
+		<div class="target">Testing media-queries grouping in scss.</div>
+		<div class="bar">Testing media media-queries grouping in scss.</div>
 	</body>
 </html>
