--- a/z-index-collection/b.html
+++ b/z-index-collection/b.html
@@ -4,12 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
 		<link rel="stylesheet" href="style.css" />
+		<title>Document</title>
 	</head>
 	<body>
-		<!-- <img src="./image-01.jpg" alt="image here..." /> -->
-		<p class="grow-messg">The image stopped growing.</p>
-		<p class="shrink-messg">The image stopped shrinking.</p>
+		I am b.html.
 	</body>
 </html>
