--- a/z-index-collection/z-index-again/index.html
+++ b/z-index-collection/z-index-again/index.html
@@ -4,12 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>z-index</title>
+		<link rel="stylesheet" href="basicStyle.css" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<!-- <img src="./image-01.jpg" alt="image here..." /> -->
-		<p class="grow-messg">The image stopped growing.</p>
-		<p class="shrink-messg">The image stopped shrinking.</p>
+		<div class="one box"></div>
+		<div class="two box">
+			<div class="three box"></div>
+		</div>
 	</body>
 </html>
