--- a/grid-portfolio-site-kevin/index.html
+++ b/grid-portfolio-site-kevin/index.html
@@ -126,7 +126,7 @@
 
 						<!-- Portfolio modal 1 -->
 						<div class="portfolio-modal">
-							<button class="modal-close">
+							<!-- <button class="modal-close">
 								<svg x="0px" y="0px" viewBox="0 0 30 17" height="17" width="30">
 									<g transform="translate(-15 -15)">
 										<polygon
@@ -136,13 +136,13 @@
 										/>
 									</g>
 								</svg>
-							</button>
-							<div class="portfolio-header header-one">
+							</button> -->
+							<!-- <div class="portfolio-header header-one">
 								<div class="portfolio-title-box">
 									<h2 class="portfolio-title">Project Name</h2>
 									<p class="portfolio-subtitle">Subtitle goes here</p>
 								</div>
-							</div>
+							</div> -->
 							<!-- / portfolio-header -->
 							<div class="portfolio-content">
 								<p>
@@ -225,7 +225,7 @@
 							<a href="#" class="portfolio-link">More info</a>
 						</figcaption>
 						<div class="portfolio-modal">
-							<button class="modal-close">
+							<!-- <button class="modal-close">
 								<svg x="0px" y="0px" viewBox="0 0 30 17" height="17" width="30">
 									<g transform="translate(-15 -15)">
 										<polygon
@@ -235,13 +235,15 @@
 										/>
 									</g>
 								</svg>
-							</button>
-							<div class="portfolio-header header-two">
+							</button> -->
+
+							<!-- edited by us only  (ptaa nhi kyooo) Extra text fixing -->
+							<!-- <div class="portfolio-header header-two">
 								<div class="portfolio-title-box">
 									<h2 class="portfolio-title">Project Name 2</h2>
 									<p class="portfolio-subtitle">Subtitle goes here</p>
-								</div>
-							</div>
+								</div> 
+							</div> -->
 							<!-- / portfolio-header -->
 							<div class="portfolio-content">
 								<p>
