--- a/grid-portfolio-site-kevin/index.html
+++ b/grid-portfolio-site-kevin/index.html
@@ -15,47 +15,48 @@
 				<li><a href="#portfolio">portfolio</a></li>
 				<li><a href="#contact">contact</a></li>
 			</ul>
-
-			<button class="menu-button">
-				<svg
-					class="hamburger"
-					x="0px"
-					y="0px"
-					viewBox="0 0 30 17"
-					height="17"
-					width="30"
-				>
-					<g transform="translate(-15 -15)">
-						<rect x="15" y="16" class="st0" width="30" height="2" />
-					</g>
-					<g transform="translate(-15 -9)">
-						<rect x="15" y="16" class="st0" width="30" height="2" />
-					</g>
-					<g transform="translate(-15 -3)">
-						<rect x="15" y="16" class="st0" width="30" height="2" />
-					</g>
-				</svg>
-				<svg
-					class="close-icon"
-					x="0px"
-					y="0px"
-					viewBox="0 0 30 17"
-					height="17"
-					width="30"
-				>
-					<g transform="translate(-15 -15)">
-						<polygon
-							class="st0"
-							points="31.2,23.5 37,29.3 35.8,30.5 30,24.7 24.2,30.5 23,29.3 28.8,23.5 23,17.7 24.2,16.5 30,22.3 
-	   35.8,16.5 37,17.7 	"
-						/>
-					</g>
-				</svg>
-			</button>
 		</nav>
 
+		
 		<div class="container-all">
 			<div class="welcome" id="home">
+				<button class="menu-button">
+					<svg
+						class="hamburger"
+						x="0px"
+						y="0px"
+						viewBox="0 0 30 17"
+						height="17"
+						width="30"
+					>
+						<g transform="translate(-15 -15)">
+							<rect x="15" y="16" class="st0" width="30" height="2" />
+						</g>
+						<g transform="translate(-15 -9)">
+							<rect x="15" y="16" class="st0" width="30" height="2" />
+						</g>
+						<g transform="translate(-15 -3)">
+							<rect x="15" y="16" class="st0" width="30" height="2" />
+						</g>
+					</svg>
+					<svg
+						class="close-icon"
+						x="0px"
+						y="0px"
+						viewBox="0 0 30 17"
+						height="17"
+						width="30"
+					>
+						<g transform="translate(-15 -15)">
+							<polygon
+								class="st0"
+								points="31.2,23.5 37,29.3 35.8,30.5 30,24.7 24.2,30.5 23,29.3 28.8,23.5 23,17.7 24.2,16.5 30,22.3 
+		   35.8,16.5 37,17.7 	"
+							/>
+						</g>
+					</svg> 
+				</button>
+		
 				<h1>Welcome to my<span>Portfolio</span></h1>
 			</div>
 
@@ -393,7 +394,7 @@
 				<p class="copyright">Copyright 2017 Joe Portfolio</p>
 			</footer>
 		</div>
-		<!-- <script src="js/nav.js"></script> -->
+		<script src="js/nav.js"></script> 
 		<!-- <script src="js/modal.js"></script> -->
 	</body>
 </html>
