completed the navigation bar

--- a/grid-portfolio-site-kevin/index.html
+++ b/grid-portfolio-site-kevin/index.html
@@ -17,7 +17,6 @@
 			</ul>
 		</nav>
 
-		
 		<div class="container-all">
 			<div class="welcome" id="home">
 				<button class="menu-button">
@@ -54,9 +53,9 @@
 		   35.8,16.5 37,17.7 	"
 							/>
 						</g>
-					</svg> 
+					</svg>
 				</button>
-		
+
 				<h1>Welcome to my<span>Portfolio</span></h1>
 			</div>
 
@@ -127,7 +126,7 @@
 
 						<!-- Portfolio modal 1 -->
 						<div class="portfolio-modal">
-							<!-- <button class="modal-close">
+							<button class="modal-close">
 								<svg x="0px" y="0px" viewBox="0 0 30 17" height="17" width="30">
 									<g transform="translate(-15 -15)">
 										<polygon
@@ -137,13 +136,14 @@
 										/>
 									</g>
 								</svg>
-							</button> -->
-							<!-- <div class="portfolio-header header-one">
+							</button>
+							-->
+							<div class="portfolio-header header-one">
 								<div class="portfolio-title-box">
 									<h2 class="portfolio-title">Project Name</h2>
 									<p class="portfolio-subtitle">Subtitle goes here</p>
 								</div>
-							</div> -->
+							</div>
 							<!-- / portfolio-header -->
 							<div class="portfolio-content">
 								<p>
@@ -226,7 +226,7 @@
 							<a href="#" class="portfolio-link">More info</a>
 						</figcaption>
 						<div class="portfolio-modal">
-							<!-- <button class="modal-close">
+							<button class="modal-close">
 								<svg x="0px" y="0px" viewBox="0 0 30 17" height="17" width="30">
 									<g transform="translate(-15 -15)">
 										<polygon
@@ -236,15 +236,15 @@
 										/>
 									</g>
 								</svg>
-							</button> -->
+							</button>
 
 							<!-- edited by us only  (ptaa nhi kyooo) Extra text fixing -->
-							<!-- <div class="portfolio-header header-two">
+							<div class="portfolio-header header-two">
 								<div class="portfolio-title-box">
 									<h2 class="portfolio-title">Project Name 2</h2>
 									<p class="portfolio-subtitle">Subtitle goes here</p>
-								</div> 
-							</div> -->
+								</div>
+							</div>
 							<!-- / portfolio-header -->
 							<div class="portfolio-content">
 								<p>
@@ -394,7 +394,7 @@
 				<p class="copyright">Copyright 2017 Joe Portfolio</p>
 			</footer>
 		</div>
-		<script src="js/nav.js"></script> 
+		<script src="js/nav.js"></script>
 		<!-- <script src="js/modal.js"></script> -->
 	</body>
 </html>
