finished party Awesome Good*3

--- a/grid-portfolio-site-kevin/index.html
+++ b/grid-portfolio-site-kevin/index.html
@@ -383,6 +383,6 @@
 			</footer>
 		</div>
 		<script src="js/nav.js"></script>
-		<!-- <script src="js/modal.js"></script> -->
+		<script src="js/modal.js"></script>
 	</body>
 </html>
